[package]
name = "buffer_autohide-rs"
version = "0.0.1"
authors = ["Lara <lara@uwu.is>"]
edition = "2018"

[lib]
name = "buffer_autohide"
crate-type = ["dylib"]

[dependencies]
weechat = { git = 'https://github.com/yayayayaka/rust-weechat', branch = "set_hidden", version = "0.4.0", features = ["config_macro"]}